--- a/index.html
+++ b/index.html
@@ -33,9 +33,14 @@
 				<input type="number" id="isbn" class="u-full-width">
 			</div>
 
-		</form>
+			<div>
 
-		<hr>
+				<input type="submit" value="submit" class="u-full-width">
+
+			</div>
+
+		</form>
+		
 		
 		<table class="u-full-width">
 
